--- a/Listr/Index.html
+++ b/Listr/Index.html
@@ -17,7 +17,7 @@
     <title>Listr - Home</title>
 </head>
 
-<body>
+<body onload="setup()">
 <div class="container">
     <div class="header">
         <header>
