Got Requests Working again

--- a/Listr/Index.html
+++ b/Listr/Index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="Resources/CSS/General.css">
     <link rel="icon" type="image/png" href="Resources/Images/Icon.png">
     <script type="text/javascript" src="Resources/JS/Snackbar.js"></script>
-    <script type="text/javascript" src="Resources/JS/Input.js"></script>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
 
@@ -14,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="Resources/CSS/Logo.css">
     <script type="text/javascript" src="Resources/JS/Logo.js"></script>
     <script type="text/javascript" src="Resources/JS/Dropdown.js"></script>
+    <script type="text/javascript" src="Resources/JS/Input.js"></script>
+    <script type="text/javascript" src="Resources/JS/API%20Handeler.js"></script>
     <title>Listr - Home</title>
 </head>
 
@@ -68,7 +69,7 @@
                     <div id="dropdown" class="dropdown-content"></div>
                 </div>
 
-                <button id="make-list-button" onclick="parse(document.getElementById('center-main-input').value)">></button>
+                <button id="make-list-button" onclick="query()">></button>
 
             </div>
 
