Functioning Pre-Alpha Version

--- a/Listr/index.html
+++ b/Listr/index.html
@@ -36,9 +36,9 @@
 
                 <nav id="top-nav">
                     <ul id="pages">
-                        <li id="about" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Test 1</a></li>
-                        <li id="projects" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Test 2</a></li>
-                        <li id="login" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Test 3</a></li>
+                        <li id="about" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Hover</a></li>
+                        <li id="projects" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Over</a></li>
+                        <li id="login" class="nav-li"><a class="header-link" onclick="showOFO()" href="javascript:;">Me</a></li>
                     </ul>
                 </nav>
 
