Functioning Pre-Alpha Version

--- a/Listr/index.html
+++ b/Listr/index.html
@@ -73,9 +73,8 @@
 
             </div>
 
-            <div id="main-list" class="visible">
-                <div id="spotlight" class="result">
-                    <bold>spotlight</bold>
+            <div id="main-list" class="">
+                <div id="spotlight" class="result spotlight">
                 </div>
 
                 <div id="list">
