--- a/Listr/index.html
+++ b/Listr/index.html
@@ -80,6 +80,10 @@
                 <div id="list">
                     <ul class="result-list" id="vid-list"></ul>
                 </div>
+
+                <div>
+                    <button id="load-more" onclick="loadMore()">Load More</button>
+                </div>
             </div>
 
         </div>
